<resources>
    <string name="app_name">PicoBlaze Simulator</string>
    <string name="picoblaze_simulator_machine_code">PicoBlaze Simulator - machine code</string>
    <string name="picoblaze_simulator_assembly_code">PicoBlaze Simulator - assembly code</string>
    <string name="picoblaze_simulator_examples">PicoBlaze Simulator - examples</string>
    <string name="picoblaze_simulator_register_dump">PicoBlaze Simulator - register dump</string>
    <string name="picoblaze_simulator_simulation">PicoBlaze Simulator - simulation</string>
    <string name="choose_an_example">Choose an example</string>
    <string name="assemble_and_run">Assemble and run</string>
    <string name="highlight_assembly">Highlight Assembly</string>
    <string name="assemble">Assemble</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="back_to_assembly_code">Back to Assembly Code</string>
    <string name="back_to_machine_code">Back to Machine Code</string>
    <string name="continue_simulating">Continue Simulating</string>
    <string name="simulate_single_instruction">Simulate single instruction</string>
    <string name="back_to_assembly">Back to Assembly</string>
    <string name="dump_the_registers">Dump the Registers</string>
    <string name="simulate_the_machine_code">Simulate the Machine Code</string>
    <string name="go_to_register_dump">Go to register dump</string>
    <string name="address">Address in EPROM</string>
    <string name="line_of_assembly">Line of Assembly</string>
    <string name="machine_code_directive">Machine Code Directive</string>
    <string name="icon">Icon</string>
    <string name="name_of_the_example_program">Name of the example program</string>
    <string name="empty_response_warning">The server returned an empty response!?</string>
    <string name="network_error_warning">\"Cannot connect to the server with example programs! \"</string>
</resources>